some changes gitignore